--- a/frontend/public/css/mainstyle.css
+++ b/frontend/public/css/mainstyle.css
@@ -70,7 +70,7 @@ body {
 
 .display {
   flex-shrink: 0;
-  background-color: darkblue;
+  background-color: rgb(242, 242, 179);
   color: white;
   text-align: center;
   min-height: 45vh;
